force-app/main/default/objects/Account_Plan_Colleague_Role__c/Account_Plan_Colleague_Role__c.object-meta.xml
<CustomObject>
    <description>The &apos;Account Plan Colleague Role&apos; object in Salesforce represents the roles and responsibilities of colleagues involved in executing an Account Plan. Account managers can use this object to assign specific roles to colleagues, defining their responsibilities and contributions towards achieving the goals outlined in the Account Plan.</description>
    <label>Account Plan Collega Rol</label>
    <nameField>
        <displayFormat>APCR-{0}</displayFormat>
        <label>Account Plan Colleague Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Collega&apos;s Rol</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>