force-app/main/default/objects/Account_Plan_Colleague_Role__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>TEXT(User__r.BusinessUnitPick__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>