force-app/main/default/objects/Account_Plan_Colleague_Role__c/fields/ColleagueRolePick__c.field-meta.xml
<CustomField>
    <fullName>ColleagueRolePick__c</fullName>
    <label>Colleague Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Project Director</fullName>
            </value>
            <value>
                <fullName>Chief Executor</fullName>
            </value>
            <value>
                <fullName>Executor</fullName>
            </value>
            <value>
                <fullName>Work Planner</fullName>
            </value>
            <value>
                <fullName>Commercial Manager</fullName>
            </value>
            <value>
                <fullName>Business Analist</fullName>
            </value>
            <value>
                <fullName>Marketeer</fullName>
            </value>
            <value>
                <fullName>EMVI-Manager</fullName>
            </value>
            <value>
                <fullName>EMVI-Writer</fullName>
            </value>
            <value>
                <fullName>Tender Coordinator</fullName>
            </value>
            <value>
                <fullName>Tender Leader</fullName>
            </value>
            <value>
                <fullName>Tender Manager</fullName>
            </value>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>